# SRAL

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  meson.build  meson_options.txt
.github/workflows/: cmake-build.yml
Bindings/Lua/ffi/: example.lua  sral.lua
Bindings/Python/: Example.py  sral.py
Bindings/go/: go.work
Bindings/go/SRAL/: cgo_flags.go  internal.go  sral.go  types.go
Bindings/go/SRAL_example/: main.go
Dep/: AndroidAccessibilityManagerHelper.java  AndroidContext.cpp  AndroidContext.h  AndroidTTSHelper.java  UIAProvider.cpp  UIAProvider.h  blastspeak.c  blastspeak.h  fsapi.c  nvda_control.c  nvda_control.h  utf-8.c  utf-8.h  wasapi.cpp  wasapi.h
Examples/C/: NVDAControlExConsole.c  SRALExample.c
Examples/CPP/: SRALExample.cpp
Examples/ObjC/: SRALCocoaExample.m
Include/: SRAL.h  Sral.hpp
SRC/: ACAnnouncer.cpp  ACAnnouncer.h  AVSpeech.h  AVSpeech.mm  AndroidAccessibilityManager.cpp  AndroidAccessibilityManager.h  AndroidTextToSpeech.cpp  AndroidTextToSpeech.h  Encoding.cpp  Encoding.h  Engine.cpp  Engine.h  Jaws.cpp  Jaws.h  NSSpeech.h  NSSpeech.mm  NVDA.cpp  NVDA.h  SAPI.cpp  SAPI.h  SRAL.cpp  ScreenReader.h  SpeechDispatcher.cpp  SpeechDispatcher.h  UIA.cpp  UIA.h  Util.cpp  Util.h  VoiceOver.h  VoiceOver.mm  ZDSR.cpp  ZDSR.h
